service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundryvtt
  namespace: foundryvtt
spec:
  selector:
    app: foundryvtt
  ports:    
    - protocol: TCP
      port: 80
      targetPort: 30000
      name: foundryvtt
